--- a/Tirbute Page/tribute.css
+++ b/Tirbute Page/tribute.css
@@ -2,3 +2,15 @@ body{
     background-color: beige;
     color: midnightblue;
 }
+
+#title{
+    text-align: center;
+}
+img{
+    display: block;
+}
+#image{
+    max-width:100%;
+    height:auto;
+    align-items: center;
+}
